--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
             </div>
         </section>
 
-        <section class="latest-news">
+        <!--<section class="latest-news">
             <h3>Latest News</h3>
             <article>
-                <h4>Sunday Games Cancelled</h4>
+                <h4>Sunday Games</h4>
                 <p>All super League games for Sunday are cancelled because our LFA squad and Future Academy are participating in Clinix cup this coming Sunday.</p>
                 <p class="signature">Patrick Mokwena, OFLFA Secretary</p>
             </article>
-        </section>
+        </section>-->
     </main>
 
     <footer>
