--- a/teams.html
+++ b/teams.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OFLFA - Teams</title>
+    <title>LFA - Teams</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
 </head>
@@ -11,7 +11,7 @@
     <header>
         <div class="logo">
             <img src="images/oflfaLogo.jpg" alt="Association Logo">
-            <h1>OFLFA</h1>
+            <h1>LFA</h1>
             <p>Orange Farm Local Football Association</p>
         </div>
         <nav>
@@ -31,12 +31,12 @@
         <h2>OFLFA Teams</h2>
         
         <section class="teams-gallery">
-            <img src="images/oflfaPlayers1.jpg" alt="OFLFA Teams">
+            <img src="images/oflfaRedTeam.jpg" alt="OFLFA Teams">
             <img src="images/oflfaWhiteTeam.jpg" alt="OFLFA Teams">
-            <img src="images/oflfaPlayersStatium1.jpg" alt="OFLFA Teams">
-            <img src="images/oflfaPlayersStadium4.jpg" alt="OFLFA Teams">
+            <img src="images/oflfaYellowTeam.jpg" alt="OFLFA Teams">
+            <img src="images/oflfaOrangeTeam.jpg" alt="OFLFA Teams">
             <img src="images/oflfaPlayersStatium2.jpg" alt="OFLFA Teams">
-            <img src="images/oflfaPlayersStadium2.jpg" alt="OFLFA Teams">
+            <img src="images/oflfaStrypeTeam.jpg" alt="OFLFA Teams">
             
             <div class="team-list">
                 <h3>OFLFA Super League Teams</h3>
@@ -78,7 +78,7 @@
         <div class="social-links">
             <a href="https://www.facebook.com/100044280886818/posts/pfbid0WZRqadmvbjBEmf9iNDyKA7jNMfUiWojqQqQiNPMwqe2idGEJfHX9eDQik8mLitgXl/?app=fbl" target="_blank">Facebook</a>
         </div>
-        <p>&copy; 2025 OFLFA. All rights reserved.</p>
+        <p>&copy; 2025 Orange Farm Local Football Association - LFA. All rights reserved. By the CSS team</p>
     </footer>
 
     <script src="js/main.js"></script>
