--- a/members.html
+++ b/members.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OFLFA - Members</title>
+    <title>LFA - Members</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
 </head>
@@ -11,7 +11,7 @@
     <header>
         <div class="logo">
             <img src="images/oflfaLogo.jpg" alt="Association Logo">
-            <h1>OFLFA</h1>
+            <h1>LFA</h1>
             <p>Orange Farm Local Football Association</p>
         </div>
         <nav>
@@ -36,6 +36,12 @@
                 <h3>Patrick Mokwena</h3>
                 <p>OFLFA Secretary</p>
             </div>
+
+            <img src="images/oflfaTeam1.jpg" alt="OFLFA Members">
+            <div class="member-info">
+                <h3>Team Members</h3>
+                <p>OFLFA Professional Game Makers</p>
+            </div>
         </section>
     </main>
 
@@ -43,7 +49,7 @@
         <div class="social-links">
             <a href="https://www.facebook.com/100044280886818/posts/pfbid0WZRqadmvbjBEmf9iNDyKA7jNMfUiWojqQqQiNPMwqe2idGEJfHX9eDQik8mLitgXl/?app=fbl" target="_blank">Facebook</a>
         </div>
-        <p>&copy; 2025 OFLFA. All rights reserved.</p>
+        <p>&copy; 2025 Orange Farm Local Football Aaaociation - LFA. All rights reserved. By the CSS team.</p>
     </footer>
 
     <script src="js/main.js"></script>
