--- a/results.html
+++ b/results.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OFLFA - Results</title>
+    <title>LFA - Results</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
 </head>
@@ -11,8 +11,8 @@
     <header>
         <div class="logo">
             <img src="images/oflfaLogo.jpg" alt="Association Logo">
-            <h1>OFLFA</h1>
-            <p>Orange Farm Local Football Association</p>
+            <h1>LFA</h1>
+            <p>Local Football Association</p>
         </div>
         <nav>
             <ul>
@@ -75,7 +75,7 @@
         <div class="social-links">
             <a href="https://www.facebook.com/100044280886818/posts/pfbid0WZRqadmvbjBEmf9iNDyKA7jNMfUiWojqQqQiNPMwqe2idGEJfHX9eDQik8mLitgXl/?app=fbl" target="_blank">Facebook</a>
         </div>
-        <p>&copy; 2025 OFLFA. All rights reserved.</p>
+        <p>&copy; 2025 Orange Farm Local Football Association - LFA. All rights reserved. by the CSS team</p>
     </footer>
 
     <script src="js/main.js"></script>
