--- a/results.html
+++ b/results.html
@@ -61,10 +61,19 @@
                     <li>Ajax18 beat BSA (3-0)</li>
                 </ul>
             </div>
+
+            <div class="result-card">
+                <h3>OFLFA Super League - Thursday</h3>
+                <p>Date: 17/07/2025</p>
+                <ul>
+                    <li>Kweneng beats Blue Wheals (2 - 1)</li>
+                </ul>
+            </div>
         </section>
 
         <section class="league-table">
             <h3>League Table</h3>
+            <img src="images/oflfaLeagueTable17072025.jpg" alt="OFLFA League Table">
             <img src="images/oflfaLeagueTable.jpg" alt="OFLFA League Table">
             <img src="images/oflfaLeagueTable2.jpg" alt="OFLFA Anaxture Table">
             <img src="images/oflfaLeagueTable3.jpg" alt="OFLFA Anaxture Table">
