adding upcoming matches

--- a/fixtures.html
+++ b/fixtures.html
@@ -42,6 +42,19 @@
                 <li>Teams must wear proper soccer kit and socks</li>
                 <li>The Referees fee is R100 per team</li>
             </ul>
+
+            <section class="fixture-list" id="juniorfixtureContainer">
+            <!-- Fixtures will be loaded from JavaScript -->
+            </section>
+
+            <section class="reminders">
+                <h3>General Reminders</h3>
+                <ul>
+                    <li>Teams must be early</li>
+                    <li>Teams must bring their soccer balls</li>
+                    <li>Teams must wear proper soccer kit and socks</li>
+                </ul>
+            <section>
         </section>
     </main>
 
@@ -53,6 +66,7 @@
     </footer>
 
     <script src="js/fixtures.js"></script>
+    <script src="js/juniorFixtures.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
