--- a/teams.html
+++ b/teams.html
@@ -36,7 +36,13 @@
             <img src="images/oflfaYellowTeam.jpg" alt="OFLFA Teams">
             <img src="images/oflfaOrangeTeam.jpg" alt="OFLFA Teams">
             <img src="images/oflfaPlayersStatium2.jpg" alt="OFLFA Teams">
-            <img src="images/oflfaStrypeTeam.jpg" alt="OFLFA Teams">
+            <img src="images/juniorTeam1.jpg" alt="OFLFA Teams">
+            <img src="images/juniorTeam2.jpg" alt="OFLFA Teams">
+            <img src="images/juniorTeam3.jpg" alt="OFLFA Teams">
+            <img src="images/juniorTeam4.jpg" alt="OFLFA Teams">
+            <img src="images/juniorTeam5.jpg" alt="OFLFA Teams">
+            <img src="images/juniorTeam6.jpg" alt="OFLFA Teams">
+            <img src="images/juniorTeam7.jpg" alt="OFLFA Teams">
             
             <div class="team-list">
                 <h3>OFLFA Super League Teams</h3>
